test/regtest/goldens/errors/unassigned_expr.ir
Error: : Line: 5, Byte: 7, Column: 4
  Expression returning result must be assigned or used: Line: 4, Byte: 1, Column: 1

